Ya esta todo programado, en este commit subo las páginas/subpáginas: de los continentes, la de errores mapa y el index.html (la principal). Falta añadir el inframe del mapa de Africa. Y también hay que revisar las faltas ortografica

--- a/Subpáginas/Africa/Africa.html
+++ b/Subpáginas/Africa/Africa.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Oceanía</title>
+    <title>Africa</title>
     <meta content="">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -17,7 +17,7 @@
 
     <h1>
 
-        Oceanía
+        Africa
 
     </h1>
 
@@ -28,7 +28,7 @@
     <div style="text-align: center;">
         <!--Para centrar-->
 
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=13WaAPwNNjXR1mrt1-Yldj_mDVeXBwswN" width="640" height="480"></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1AHBf1UMuCk1MYP2z2lOcSAJBmZk4oQRa" width="640" height="480"></iframe>
 
     </div>
 
@@ -52,7 +52,8 @@
             <br><br>
 
             <a style="color: #9FD3F3;" href="../Error.html"><button type="button"
-                class="btn btn-info botonBostrap ">Pulse aquí si tiene<br> dificultades para cargar <br> el mapa<br></button></a>
+                    class="btn btn-info botonBostrap ">Pulse aquí si tiene<br> dificultades para cargar <br> el
+                    mapa<br></button></a>
 
             <a style="color: #9FD3F3;" href="../listaAE.html"><button type="button"
                     class="btn btn-danger botonBostrap ">Lista de Aeropuertos</button></a>
