--- a/index.html
+++ b/index.html
@@ -1,26 +1,55 @@
 <html>
-  <head>
+
+<head>
 
     <!--Titulo-->
 
     <title>Sevilla 2032</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     <!--Linkear hoja de estilos propia-->
 
-    <link rel="stylesheet" type="text/css" href="HojasEstilo/principal.css"/>
+    <link rel="stylesheet" type="text/css" href="HojasEstilo/principal.css" />
 
     <!--Linkear bosstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <meta content="">
 
     <style></style>
-  </head>
-  
-  <body>
+</head>
+
+<body>
+
+    <h1>Sevilla 2032</h1>
+
+    <h2>como llegar mediante avión</h2>
+
+    <br>
+    <br>
+
+    <div style="text-align: center;">
+        <a style="color: #9FD3F3;" href="Subpáginas/America/America.html"><button type="button" class="btn btn-dark botonBostrap">America</button></a>
+
+        <a style="color: #9FD3F3;" href="Subpáginas/Asia/Asia.html"><button type="button" class="btn btn-dark botonBostrap">Asia</button></a>
+
+        <a style="color: #9FD3F3;" href="Subpáginas/Oceania/oceania.html"><button type="button" class="btn btn-dark botonBostrap">Oceanía</button></a>
+
+        <a style="color: #9FD3F3;" href="Subpáginas/Europa/europa.html"><button type="button" class="btn btn-dark botonBostrap">Europa</button></a>
+
+        <a style="color: #9FD3F3;" href="Subpáginas/Africa/Africa.html"><button type="button" class="btn btn-dark botonBostrap">Africa</button></a>
+
+        <br>
+
+        <br>
+
+        <a style="color: #9FD3F3;" href="../listaAE.html"><button type="button"
+          class="btn btn-danger botonBostrap ">Lista de Aeropuertos</button></a>
+
+    </div>
 
 
 
-  </body>
+</body>
+
 </html>
