--- a/Subpáginas/Asia/Asia.html
+++ b/Subpáginas/Asia/Asia.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Oceanía</title>
+    <title>Asia</title>
     <meta content="">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -17,7 +17,7 @@
 
     <h1>
 
-        Oceanía
+        Asia
 
     </h1>
 
@@ -28,8 +28,7 @@
     <div style="text-align: center;">
         <!--Para centrar-->
 
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=13WaAPwNNjXR1mrt1-Yldj_mDVeXBwswN" width="640" height="480"></iframe>
-
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1LXDx6uAcmFEg3y5K769Yi1BrVjkGRQHg" width="640" height="480"></iframe>
     </div>
 
     <br><br>
@@ -52,7 +51,8 @@
             <br><br>
 
             <a style="color: #9FD3F3;" href="../Error.html"><button type="button"
-                class="btn btn-info botonBostrap ">Pulse aquí si tiene<br> dificultades para cargar <br> el mapa<br></button></a>
+                    class="btn btn-info botonBostrap ">Pulse aquí si tiene<br> dificultades para cargar <br> el
+                    mapa<br></button></a>
 
             <a style="color: #9FD3F3;" href="../listaAE.html"><button type="button"
                     class="btn btn-danger botonBostrap ">Lista de Aeropuertos</button></a>
