--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <br>
 
-        <a style="color: #9FD3F3;" href="../listaAE.html"><button type="button"
+        <a style="color: #9FD3F3;" href="Subpáginas/listaAE.html"><button type="button"
           class="btn btn-danger botonBostrap ">Lista de Aeropuertos</button></a>
 
     </div>
