--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
     <title>Sevilla 2032</title>
 
+    <link rel="icon" href="Imagenes/icono.png">
+
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!--Linkear hoja de estilos propia-->
